--- a/about.html
+++ b/about.html
@@ -8,188 +8,195 @@
     <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header-conteiner conteiner">
-        <a class="logo-link" href="./index.html">
-          <img class="logo-img" src="/img/Logo1.png" alt="logo" />
-        </a>
+    <div class="background">
+      <header class="header">
+        <div class="header-conteiner conteiner">
+          <a class="logo-link" href="./index.html">
+            <img class="logo-img" src="/img/Logo1.png" alt="logo" />
+          </a>
 
-        <button
-          type="button"
-          class="menu-button js-menu-button"
-          aria-controls="nav-menu"
-        >
-          <svg width="45" height="45">
-            <use
-              href="./svg/symbol-defs.svg#menu-button"
-              class="icon-burger"
-            ></use>
-            <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
-          </svg>
-        </button>
+          <button
+            type="button"
+            class="menu-button js-menu-button"
+            aria-controls="nav-menu"
+          >
+            <svg width="45" height="45">
+              <use
+                href="./svg/symbol-defs.svg#menu-button"
+                class="icon-burger"
+              ></use>
+              <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
+            </svg>
+          </button>
 
-        <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="  nav-item">
-            <a href="./projects.html" class="nav-project nav-link">Prosjekter</a>
-          </li>
-          <li class="nav-item ">
-            <a href="./about.html" class="nav-about nav-link accent-border ">Om oss</a>
-          </li>
-          <li class="nav-item">
-            <a href="./news.html" class="nav-news nav-link">Nyheter</a>
-          </li>
-          <li class="nav-item">
-            <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
-          </li>
-        </ul>
-      </div>
-    </header>
+          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+            <li class="nav-item">
+              <a href="./projects.html" class="nav-project nav-link"
+                >Prosjekter</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="./about.html" class="nav-about nav-link accent-border"
+                >Om oss</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="./news.html" class="nav-news nav-link">Nyheter</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacts.html" class="nav-contacts nav-link"
+                >Kontakt</a
+              >
+            </li>
+          </ul>
+        </div>
+      </header>
 
-    <div class="page-title">
-      <div class="conteiner">
-        <div class="about__img"></div>
-        <div class="about__title-conteiner">
-          
-          <h1 class="about__title">Om oss</h1>
-          <p>
-            Odin Eiendom jobber målrettet med stort fokus på tilrettelegging,
-            forhandling, koordinering og planlegging.
-          </p>
+      <div class="page-title">
+        <div class="conteiner">
+          <div class="about__img"></div>
+          <div class="about__title-conteiner">
+            <h1 class="about__title">Om oss</h1>
+            <p>
+              Odin Eiendom jobber målrettet med stort fokus på tilrettelegging,
+              forhandling, koordinering og planlegging.
+            </p>
+          </div>
         </div>
       </div>
+
+      <div class="conteiner about__conteiner">
+        <div class="about__benefits">
+          <ul class="about__benefits-list">
+            <li class="about__benefits-item">
+              <svg width="94" height="94">
+                <use href="./svg/symbol-defs.svg#tools"></use>
+              </svg>
+              <p class="about__benefits-header">La fagfolk gjøre jobben</p>
+              <p class="about__benefits-description">
+                For å sikre at jobben gjøres riktig, og for å unngå
+                overraskelser er det alltid best å la fagfolk gjøre jobben.
+              </p>
+            </li>
+            <li class="about__benefits-item">
+              <svg width="117" height="117">
+                <use href="./svg/symbol-defs.svg#smile"></use>
+              </svg>
+              <p class="about__benefits-header">La fagfolk gjøre jobben</p>
+              <p class="about__benefits-description">
+                For å sikre at jobben gjøres riktig, og for å unngå
+                overraskelser er det alltid best å la fagfolk gjøre jobben.
+              </p>
+            </li>
+            <li class="about__benefits-item">
+              <svg width="109" height="110">
+                <use href="./svg/symbol-defs.svg#list"></use>
+              </svg>
+              <p class="about__benefits-header">La fagfolk gjøre jobben</p>
+              <p class="about__benefits-description">
+                For å sikre at jobben gjøres riktig, og for å unngå
+                overraskelser er det alltid best å la fagfolk gjøre jobben.
+              </p>
+            </li>
+          </ul>
+
+          <div class="about__house-img"></div>
+
+          <ul class="about__housing-list">
+            <li class="about_housing-item">
+              <h3>Helhetlig uttrykk h2</h3>
+              <p>
+                Vårt team har bred kunnskap i eiendomsdannelse, i det vektlegger
+                vi – eiendoms-, miljø- og planleggings juss, eiendomsøkonomi og
+                byplanlegging. Vi ser eiendomsutvikling som en tverrfaglig
+                profesjon, herunder – fasilitetsstyring, strategisk
+                arealforvaltning, identifisering av bruker og virksomhetsbehov,
+                samt evaluering av brukskvalitet med tilhørende teorier, metoder
+                og verktøy.
+              </p>
+            </li>
+            <li class="about_housing-item about_housing-item-desktop">
+              <h3>Helhetlig uttrykk h2</h3>
+              <p>
+                Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens
+                målsettinger og behov.
+              </p>
+            </li>
+          </ul>
+
+          <div class="about__teracce-img"></div>
+        </div>
+        <div class="partners">
+          <h3 class="partners__header">Våre Samarbeidspartnere</h3>
+          <ul class="partners__list">
+            <li class="partner-item">
+              <a href=""><img src="./img/partner1.png" alt="wexels" /></a>
+            </li>
+            <li class="partner-item">
+              <a href=""><img src="./img/partner2.png" alt="maxbo" /></a>
+            </li>
+            <li class="partner-item">
+              <a href=""><img src="./img/partner3.png" alt="pbbl" /></a>
+            </li>
+            <li class="partner-item">
+              <a href=""><img src="./img/partner4.png" alt="asplan viak" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <footer class="conteiner">
+        <div class="footer__conteiner">
+          <h2 class="second-title">Kontaktinformasjon</h2>
+          <ul class="contacts-list list">
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Addrese</p>
+              <address>
+                <p>Odin Eiendom</p>
+                <p>Lunderingen 1</p>
+                <p>3941 Porsgrunn</p>
+                <a href="" class="contacts-link">Kart</a>
+              </address>
+            </li>
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Telefon</p>
+              <p>Ma - fre 10-16</p>
+              <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
+            </li>
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Mail</p>
+              <a href="malito:kontakt@odinedom.no" class="contacts-link"
+                >kontakt@odinedom.no</a
+              >
+            </li>
+          </ul>
+          <div class="copyright">
+            <p class="copyrigth-paragraph">
+              Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
+            </p>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#facebook"></use></svg
+                ></a>
+              </li>
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+                ></a>
+              </li>
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#instagram"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
-
-    <div class="conteiner about__conteiner">
-      <div class="about__benefits">
-        <ul class="about__benefits-list">
-          <li class="about__benefits-item">
-            <svg width="94" height="94">
-              <use href="./svg/symbol-defs.svg#tools"></use>
-            </svg>
-            <p>La fagfolk gjøre jobben</p>
-            <p class="about__benefits-description">
-              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
-              er det alltid best å la fagfolk gjøre jobben.
-            </p>
-          </li>
-          <li class="about__benefits-item">
-            <svg width="117" height="117">
-              <use href="./svg/symbol-defs.svg#smile"></use>
-            </svg>
-            <p>La fagfolk gjøre jobben</p>
-            <p class="about__benefits-description">
-              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
-              er det alltid best å la fagfolk gjøre jobben.
-            </p>
-          </li>
-          <li class="about__benefits-item">
-            <svg width="109" height="110">
-              <use href="./svg/symbol-defs.svg#list"></use>
-            </svg>
-            <p>La fagfolk gjøre jobben</p>
-            <p class="about__benefits-description">
-              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
-              er det alltid best å la fagfolk gjøre jobben.
-            </p>
-          </li>
-        </ul>
-
-        <div class="about__house-img"></div>
-
-        <ul class="about__housing-list">
-          <li class="about_housing-item">
-            <h3>Helhetlig uttrykk h2</h3>
-            <p>
-              Vårt team har bred kunnskap i eiendomsdannelse, i det vektlegger
-              vi – eiendoms-, miljø- og planleggings juss, eiendomsøkonomi og
-              byplanlegging. Vi ser eiendomsutvikling som en tverrfaglig
-              profesjon, herunder – fasilitetsstyring, strategisk
-              arealforvaltning, identifisering av bruker og virksomhetsbehov,
-              samt evaluering av brukskvalitet med tilhørende teorier, metoder
-              og verktøy.
-            </p>
-          </li>
-          <li class="about_housing-item about_housing-item-desktop">
-            <h3>Helhetlig uttrykk h2</h3>
-            <p>
-              Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens
-              målsettinger og behov.
-            </p>
-          </li>
-        </ul>
-
-        <div class="about__teracce-img"></div>
-      </div>
-      <div class="partners">
-        <h3>Våre Samarbeidspartnere</h3>
-        <ul class="partners__list">
-          <li class="partner-item">
-            <a href=""><img src="./img/partner1.png" alt="wexels" /></a>
-          </li>
-          <li class="partner-item">
-            <a href=""><img src="./img/partner2.png" alt="maxbo" /></a>
-          </li>
-          <li class="partner-item">
-            <a href=""><img src="./img/partner3.png" alt="pbbl" /></a>
-          </li>
-          <li class="partner-item">
-            <a href=""><img src="./img/partner4.png" alt="asplan viak" /></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <footer class="conteiner">
-      <div class="footer__conteiner">
-        <h2 class="second-title">Kontaktinformasjon</h2>
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Addrese</p>
-          <address>
-            <p>Odin Eiendom</p>
-            <p>Lunderingen 1</p>
-            <p>3941 Porsgrunn</p>
-            <a href="" class="contacts-link">Kart</a>
-          </address>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Telefon</p>
-          <p>Ma - fre 10-16</p>
-          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link"
-            >kontakt@odinedom.no</a
-          >
-        </li>
-      </ul>
-      <div class="copyright">
-        <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
-        </p>
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#facebook"></use></svg
-            ></a>
-          </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
-            ></a>
-          </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#instagram"></use></svg
-            ></a>
-          </li>
-        </ul>
-      </div>
-      </div>
-    </footer>
     <script src="./js/menuButton.js"></script>
   </body>
 </html>
