--- a/projects.html
+++ b/projects.html
@@ -8,168 +8,176 @@
     <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header-conteiner conteiner">
-        <a class="logo-link" href="./index.html">
-          <img class="logo-img" src="/img/Logo1.png" alt="logo" />
-        </a>
+    <div class="background">
+      <header class="header">
+        <div class="header-conteiner conteiner">
+          <a class="logo-link" href="./index.html">
+            <img class="logo-img" src="/img/Logo1.png" alt="logo" />
+          </a>
 
-        <button
-          type="button"
-          class="menu-button js-menu-button"
-          aria-controls="nav-menu"
-        >
-          <svg width="45" height="45">
-            <use
-              href="./svg/symbol-defs.svg#menu-button"
-              class="icon-burger"
-            ></use>
-            <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
-          </svg>
-        </button>
-
-        <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="  nav-item">
-            <a href="./projects.html" class="nav-project nav-link accent-border">Prosjekter</a>
-          </li>
-          <li class="nav-item ">
-            <a href="./about.html" class="nav-about nav-link">Om oss</a>
-          </li>
-          <li class="nav-item">
-            <a href="./news.html" class="nav-news nav-link  ">Nyheter</a>
-          </li>
-          <li class="nav-item">
-            <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-
-    <div class="page-title">
-      <h1 class="main-title conteiner">Prosjekter</h1>
-    </div>
-    <div class="conteiner projects">
-      <ul class="button-list">
-        <li class="button-item switch-border button-item-js">
-          <button class="switch-button">Alle</button>
-        </li>
-        <li class="button-item button-item-js">
-          <button class="switch-button">I salg</button>
-        </li>
-        <li class="button-item button-item-js">
-          <button class="switch-button">Kommer for salg</button>
-        </li>
-      </ul>
-
-      <ul class="projects-list list">
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project1.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project2.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project3.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project4.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project5.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="card-item">
-          <a href="./projectCard.html" class="card-link">
-            <div class="card__link-img">
-              <img src="./img/project6.png" alt="house" class="card-img" />
-            </div>
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <footer class="conteiner">
-      <div class="footer__conteiner">
-        <h2 class="second-title">Kontaktinformasjon</h2>
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Addrese</p>
-          <address>
-            <p>Odin Eiendom</p>
-            <p>Lunderingen 1</p>
-            <p>3941 Porsgrunn</p>
-            <a href="" class="contacts-link">Kart</a>
-          </address>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Telefon</p>
-          <p>Ma - fre 10-16</p>
-          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link"
-            >kontakt@odinedom.no</a
+          <button
+            type="button"
+            class="menu-button js-menu-button"
+            aria-controls="nav-menu"
           >
-        </li>
-      </ul>
-      <div class="copyright">
-        <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
-        </p>
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#facebook"></use></svg
-            ></a>
+            <svg width="45" height="45">
+              <use
+                href="./svg/symbol-defs.svg#menu-button"
+                class="icon-burger"
+              ></use>
+              <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
+            </svg>
+          </button>
+
+          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+            <li class="nav-item">
+              <a
+                href="./projects.html"
+                class="nav-project nav-link accent-border"
+                >Prosjekter</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="./about.html" class="nav-about nav-link">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="./news.html" class="nav-news nav-link">Nyheter</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacts.html" class="nav-contacts nav-link"
+                >Kontakt</a
+              >
+            </li>
+          </ul>
+        </div>
+      </header>
+
+      <div class="page-title">
+        <h1 class="main-title conteiner">Prosjekter</h1>
+      </div>
+      <div class="conteiner projects">
+        <ul class="button-list">
+          <li class="button-item switch-border button-item-js">
+            <button class="switch-button">Alle</button>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
-            ></a>
+          <li class="button-item button-item-js">
+            <button class="switch-button">I salg</button>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#instagram"></use></svg
-            ></a>
+          <li class="button-item button-item-js">
+            <button class="switch-button">Kommer for salg</button>
+          </li>
+        </ul>
+
+        <ul class="projects-list list">
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project1.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
+          </li>
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project2.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
+          </li>
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project3.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
+          </li>
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project4.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
+          </li>
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project5.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
+          </li>
+          <li class="card-item">
+            <a href="./projectCard.html" class="card-link">
+              <div class="card__link-img">
+                <img src="./img/project6.png" alt="house" class="card-img" />
+              </div>
+              <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+              <p class="project-date">Lansering okt 2023</p>
+            </a>
           </li>
         </ul>
       </div>
-      </div>
-    </footer>
+      <footer class="conteiner">
+        <div class="footer__conteiner">
+          <h2 class="second-title">Kontaktinformasjon</h2>
+          <ul class="contacts-list list">
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Addrese</p>
+              <address>
+                <p>Odin Eiendom</p>
+                <p>Lunderingen 1</p>
+                <p>3941 Porsgrunn</p>
+                <a href="" class="contacts-link">Kart</a>
+              </address>
+            </li>
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Telefon</p>
+              <p>Ma - fre 10-16</p>
+              <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
+            </li>
+            <li class="contacts-item">
+              <p class="footer__contacts-kind">Mail</p>
+              <a href="malito:kontakt@odinedom.no" class="contacts-link"
+                >kontakt@odinedom.no</a
+              >
+            </li>
+          </ul>
+          <div class="copyright">
+            <p class="copyrigth-paragraph">
+              Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
+            </p>
+            <ul class="social-list list">
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#facebook"></use></svg
+                ></a>
+              </li>
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+                ></a>
+              </li>
+              <li class="social-item">
+                <a href=""
+                  ><svg class="social-svg" width="21" height="33">
+                    <use href="./svg/symbol-defs.svg#instagram"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
     <script src="./js/menuButton.js"></script>
     <script src="./js/switchButton.js"></script>
   </body>
