--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="logo-img" src="/img/Logo1.png" alt="logo" />
           </a>
 
-          <button
+          <!-- <button
             type="button"
             class="menu-button js-menu-button"
             aria-controls="nav-menu"
@@ -27,25 +27,38 @@
               ></use>
               <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
             </svg>
+          </button> -->
+
+          <button
+            type="button"
+            class="menu-button js-menu-button"
+            aria-controls="nav-menu"
+          >
+            <div class="lines-cross">
+              <span class="line"></span>
+            <span class="line"></span>
+            </div>
           </button>
 
           <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-            <li class="nav-item">
-              <a href="./projects.html" class="nav-project nav-link"
-                >Prosjekter</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="./about.html" class="nav-about nav-link">Om oss</a>
-            </li>
-            <li class="nav-item">
-              <a href="./news.html" class="nav-news nav-link">Nyheter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./contacts.html" class="nav-contacts nav-link"
-                >Kontakt</a
-              >
-            </li>
+            <div class="test">
+              <li class="nav-item">
+                <a href="./projects.html" class="nav-project nav-link"
+                  >Prosjekter</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./about.html" class="nav-about nav-link">Om oss</a>
+              </li>
+              <li class="nav-item">
+                <a href="./news.html" class="nav-news nav-link">Nyheter</a>
+              </li>
+              <li class="nav-item">
+                <a href="./contacts.html" class="nav-contacts nav-link"
+                  >Kontakt</a
+                >
+              </li>
+            </div>
           </ul>
         </div>
       </header>
