--- a/newsCard.html
+++ b/newsCard.html
@@ -57,31 +57,30 @@
         <div class="options-conteiner">
           <div class="conteiner">
             <!-- Slider main container -->
-<div class="swiper">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide"><img
-      src="./img/carouselPhoto1.png"
-      class="carousel-img visible"
-    /></div>
-    <div class="swiper-slide"><img
-      src="./img/about-apartment.png"
-      class="carousel-img hidden"
-    /></div>
-    <div class="swiper-slide"><img src="./img/about-house.png" class="carousel-img hidden" /></div>
-    ...
-  </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
+            <div class="swiper-conteiner">
+              <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                    <img class="swiper-img" src="./img/carouselPhoto1.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-img" src="./img/about-apartment.png" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="swiper-img" src="./img/about-house.png" />
+                  </div>
+                </div>
+              </div>
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev" style="width: 70px; height: 70px; background-color: #fff; border-radius: 50%; top: 45%; left: -35px; z-index: 1;"></div>
+            <div class="swiper-button-next" style="width: 70px; height: 70px; background-color: #fff; border-radius: 50%; top: 45%; right: -35px; z-index: 1;"></div>
 
-  <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-
-  <!-- If we need scrollbar -->
-  <div class="swiper-scrollbar"></div>
-</div>
+            <div class="swiper-pagination" style="text-align: end;"></div>
+            </div>
+    
+            
             <!-- <div class="carousel-container">
               <div class="carousel-imgs">
                 <img
