--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <h2 class="visually-hidden">Boliger</h2>
       <ul class="list housing-list">
         <li class="housing-item">
-          <a><span class="housing-amount js-sale-counter">0</span> Boliger i salg</a>
+          <a><span class="housing-amount js-sale-counter counters" data-target="22">0</span> Boliger i salg</a>
         </li>
         <li class="housing-item">
-          <a><span class="housing-amount js-dev-counter">0</span> Boliger i utvikling</a>
+          <a><span class="housing-amount js-dev-counter counters" data-target="84">0</span> Boliger i utvikling</a>
         </li>
       </ul>
     </div>
