--- a/newsCard.html
+++ b/newsCard.html
@@ -74,8 +74,8 @@
                 </div>
               </div>
               <!-- If we need navigation buttons -->
-              <div class="swiper-button-prev" style="width: 70px; height: 70px; background-color: #fff; border-radius: 50%; top: 45%; left: -35px; z-index: 1;"></div>
-            <div class="swiper-button-next" style="width: 70px; height: 70px; background-color: #fff; border-radius: 50%; top: 45%; right: -35px; z-index: 1;"></div>
+              <div id="prev" class="swiper-button-prev"></div>
+            <div id="next" class="swiper-button-next"></div>
 
             <div class="swiper-pagination" style="text-align: end;"></div>
             </div>
