--- a/projectCard.html
+++ b/projectCard.html
@@ -110,7 +110,7 @@
       </div>
 
       <div class="description conteiner">
-        <ul class="options-list conteiner">
+        <ul class="options-list">
           <li class="table-items">
             <div class="options-svg">
               <svg width="41" height="41">
@@ -183,21 +183,30 @@
 
         <div class="line-container">
           <div class="progress-line">
-            <div class="status">
+            <div class="status active">
               <div class="dot">
-                <span class="started"></span>
+                <span class="dot-finished"></span>
+              </div>
+            </div>
+            <div class="status ">
+              <div class="dot in-progress">
+                <span ></span>
               </div>
             </div>
             <div class="status">
-              <div class="dot completed"></div>
+              <div class="dot">
+                <span ></span>
+              </div>
             </div>
+
             <div class="status">
-              <div class="dot"></div>
+              <div class="dot">
+                <span ></span>
+              </div>
             </div>
-  
-            <div class="status">
-              <div class="dot"></div>
-            </div>
+
+            <div class="progress-line-active" style="width: 100px;"></div>
+            
           </div>
   
           <div class="progress"></div>
