--- a/projectCard.html
+++ b/projectCard.html
@@ -183,29 +183,29 @@
 
         <div class="line-container">
           <div class="progress-line">
-            <div class="status active">
-              <div class="dot">
-                <span class="dot-finished"></span>
-              </div>
-            </div>
             <div class="status ">
+              <div class="dot">
+                <span class="finished-js dot-finished"></span>
+              </div>
+            </div>
+            <div class="status active">
               <div class="dot in-progress">
-                <span ></span>
+                <span class="finished-js"></span>
               </div>
             </div>
             <div class="status">
               <div class="dot">
-                <span ></span>
+                <span class="finished-js"></span>
               </div>
             </div>
 
             <div class="status">
               <div class="dot">
-                <span ></span>
+                <span class="finished-js"></span>
               </div>
             </div>
 
-            <div class="progress-line-active" style="width: 100px;"></div>
+            <div class="progress-line-active" style="width: 0px;"></div>
             
           </div>
   
