--- a/projectCard.html
+++ b/projectCard.html
@@ -205,7 +205,7 @@
               </div>
             </div>
 
-            <div class="progress-line-active" style="width: 0px;"></div>
+            <div class="progress-line-active"></div>
             
           </div>
   
