--- a/projectCard.html
+++ b/projectCard.html
@@ -183,12 +183,12 @@
 
         <div class="line-container">
           <div class="progress-line">
-            <div class="status ">
-              <div class="dot">
-                <span class="finished-js dot-finished"></span>
+            <div class="status">
+              <div class="dot ">
+                <span class="finished-js"></span>
               </div>
             </div>
-            <div class="status active">
+            <div class="status">
               <div class="dot in-progress">
                 <span class="finished-js"></span>
               </div>
